...
        android:layout_height="match_parent"
        android:layout_below="@id/widget_week_weekdays"
        android:layout_marginTop="3dp"
        android:orientation="vertical">
    <LinearLayout style="@style/WidgetWeekRow">
        <TextView style="@style/WidgetWeekPreviewCell"
        android:text="高等数学"
        android:background="#E3F0FB" />
        <TextView style="@style/WidgetWeekPreviewCell"
        android:text="大学英语"
        android:background="#E2F6E9" />
        <TextView style="@style/WidgetWeekPreviewCell"
        android:text="操作系统"
        android:background="#FDF2D2" />
        <TextView style="@style/WidgetWeekPreviewCell" />
        <TextView style="@style/WidgetWeekPreviewCell" />
...
